--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         :root {
             --bg-color: #0a0a0a;
-            --neon-color: #00f2ff;
+            --neon-color: #ff5e00;
         }
 
         body {
@@ -40,7 +40,7 @@
             background: conic-gradient(transparent, var(--neon-color), transparent 25%);
             top: -50%;
             left: -50%;
-            animation: rotate 4s linear infinite;
+            animation: rotate 2s linear infinite;
         }
 
         @keyframes rotate {
@@ -259,4 +259,5 @@
         }
     </script>
 </body>
+
 </html>
